TEST_PROGRAMS/VALID/Fan_Jin/power.min
# This will compute the power of x^n with n > 0

var x: int;
var n: int;

while (n - 1) do
  x = x*x;
  n = n - 1;
done

print x;
